<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginDisplayActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"

        android:padding="0dp"
        android:layout_gravity="center"
        android:src="@drawable/capture" />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/Nom"
        android:hint="@string/votre_nom"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/Prenom"
        android:hint="@string/votre_prenom"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/mail"
        android:hint="@string/votre_e_mail"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22sp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/NumTel"
        android:hint="@string/votre_numero_telephone"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/Adresse"
        android:hint="@string/votre_adresse"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/Commander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commander"
        android:layout_gravity="center"/>
</LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>